Ajout fichier media querries

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/font-awesome-4.6.3/css/font-awesome.css">
     <link rel="stylesheet" href="styles/animate.css">
-    <link rel="stylesheet" href="styles/style.css"> </head>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css"> 
+</head>
 
 <body>
    
