--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header>
         <div class="header wrapper"> <img src="images/logo.png" />
           
-           <div id="open" ><em class="fa fa-bars"></em></div>
-           <div id="close" ><em class="fa fa-times"></em></div>
+           <div id="open" class="mobile_only" ><em class="fa fa-bars"></em></div>
+           <div id="close" class="mobile_only" ><em class="fa fa-times"></em></div>
            
             <nav id="menu">
                 <ul class="navigation texte_clair" >
